--- a/README
+++ b/README
@@ -1,3 +1,10 @@
+  $Id$
+
+  This file is part of muforth.
+
+  Copyright 1997-2006 David Frech. All rights reserved, and all wrongs
+  reversed.
+
 
 ARM directory README. 22-feb-2000.
 ----------------------------------
