--- a/TODO
+++ b/TODO
@@ -1,3 +1,11 @@
+  $Id$
+
+  This file is part of muforth.
+
+  Copyright 1997-2006 David Frech. All rights reserved, and all wrongs
+  reversed.
+
+
 Check that the register order is the same, with the exception of Rd, as the
 ARM assembler.
 
