--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This file is part of muFORTH: http://sites.nimblemachines.com/muforth
+This file is part of muFORTH: http://muforth.nimblemachines.com/
 
 Copyright (c) 2002-2009 David Frech. All rights reserved, and all wrongs
 reversed. (See the file COPYRIGHT for details.)
