Second phase of muFORTH -> muforth: everything else!

--- a/README
+++ b/README
@@ -3,16 +3,16 @@ This file is part of muforth: http://muforth.nimblemachines.com/
 Copyright (c) 2002-2017 David Frech. (Read the LICENSE for details.)
 
 
-muFORTH README
+muforth README
 ==============
 
 Sadly, there isn't an up-to-date README about the current indirect-threaded
-implementation of muFORTH.
+implementation of muforth.
 
 For now you can read the old, obsolete README (now in doc/README.obsolete)
-which documents the original form of muFORTH: a simple subroutine-threaded (ie,
+which documents the original form of muforth: a simple subroutine-threaded (ie,
 native) Forth with a tiny built-in x86 compiler. While attempting to port this
-version of muFORTH to the PowerPC I ran into trouble and decided that a
+version of muforth to the PowerPC I ran into trouble and decided that a
 traditional threaded Forth might be a better choice.
 
 Many, but not all, of the concepts in the original README still apply, so
