--- a/README
+++ b/README
@@ -1,21 +1,59 @@
-This file is part of muforth: http://muforth.nimblemachines.com/
+What is muforth?
+~~~~~~~~~~~~~~~~
 
-Copyright (c) 2002-2017 David Frech. (Read the LICENSE for details.)
+muforth is a small, simple, fast, indirect-threaded code (ITC) Forth intended
+for use as a cross-compiler for microcontrollers and other embedded devices.
+It is written in C and its core is very portable. Because of its Forth nature,
+it is naturally extensible, scriptable, and customizable.
+
+It is very well-suited to interactive coding, debugging, and exploration, and
+is a great tool for bringing up new hardware.
+
+It has support - in varying degrees of completeness - for the following
+architectures:
+
+  * ARMv5 (originally targeting an ARM AEB-1 board running an ARM7DI
+    processor)
+
+  * ARMv6-m and ARMv7-m - aka Cortex-M0, M0+, M3, and M4
+
+  * Atmel AVR
+
+  * Motorola/Freescale/NXP HC08 and HCS08
+
+  * RISC-V (initially targeting the SiFive FE310)
+
+  * TI MSP430
 
 
-muforth README
-==============
+Why yet another Forth?
+~~~~~~~~~~~~~~~~~~~~~~
 
-Sadly, there isn't an up-to-date README about the current indirect-threaded
-implementation of muforth.
+There is a saying in the Forth community:
 
-For now you can read the old, obsolete README (now in doc/README.obsolete)
-which documents the original form of muforth: a simple subroutine-threaded (ie,
-native) Forth with a tiny built-in x86 compiler. While attempting to port this
-version of muforth to the PowerPC I ran into trouble and decided that a
-traditional threaded Forth might be a better choice.
+  When you've seen one Forth... you've seen one Forth!
 
-Many, but not all, of the concepts in the original README still apply, so
-skimming thru it wouldn't necessarily be a waste of time. ;-)
+I initially wrote muforth because I wanted to try out some implementation
+ideas. These days there is very little that distinguishes muforth from
+fig-FORTH - but the differences tend to go rather deep.
 
-Stay tuned for a real, up-to-date README.
+Its implementation is no longer the point. Its sole reason for existing
+is to be a cross/meta/target-compiler for _other_ Forths, and their
+implementations are in no way tied to muforth's.
+
+
+Starting points
+~~~~~~~~~~~~~~~
+
+BUILDING will tell you how to build muforth. It's stupid simple.
+
+Sadly, there isn't a lot of documentation right now. A good place to start is
+to read the source. It's generally well-commented, and is intended to be read
+and understood. mu/startup.mu4 is the heart of the system.
+
+Look in mu/target/ to find a target that interests you and start reading the
+code!
+
+http://muforth.nimblemachines.com/ is also, finally, growing its wings.
+
+Above all, enjoy!
