tweaks to README

--- a/README
+++ b/README
@@ -29,13 +29,9 @@ architectures:
 Why yet another Forth?
 ~~~~~~~~~~~~~~~~~~~~~~
 
-There is a saying in the Forth community:
-
-  When you've seen one Forth... you've seen one Forth!
-
 I initially wrote muforth because I wanted to try out some implementation
-ideas. These days there is very little that distinguishes muforth from
-fig-FORTH - but the differences tend to go rather deep.
+ideas. Today there is very little that distinguishes muforth from fig-FORTH -
+but the differences go rather deep.
 
 Its implementation is no longer the point. Its sole reason for existing
 is to be a cross/meta/target-compiler for _other_ Forths, and their
@@ -49,11 +45,14 @@ BUILDING will tell you how to build muforth. It's stupid simple.
 
 Sadly, there isn't a lot of documentation right now. A good place to start is
 to read the source. It's generally well-commented, and is intended to be read
-and understood. mu/startup.mu4 is the heart of the system.
+and understood. mu/startup.mu4 - which is read and executed every time muforth
+starts - is the heart of the system.
 
-Look in mu/target/ to find a target that interests you and start reading the
-code!
+Look in mu/target/ to find a target that interests you. There is generally a
+mu/target/<target>/build.mu4 that loads the cross-build environment. Use it as
+an "index" to find the assembler, disassembler, meta-compiler, kernel, and
+other key pieces of code.
 
-http://muforth.nimblemachines.com/ is also, finally, growing its wings.
+http://muforth.nimblemachines.com/ is also, finally, spreading its wings.
 
 Above all, enjoy!
